--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "serve": "nodemon",
     "lint": "eslint --fix .",
     "pretty": "prettier --write .",
+    "db:push": "prisma db push --schema src/app/database/schema.prisma",
     "migrate:dev": "prisma migrate dev --schema src/app/database/schema.prisma",
     "migrate:reset": "prisma migrate reset --schema src/app/database/schema.prisma",
     "prisma:generate": "prisma generate --schema src/app/database/schema.prisma"
@@ -19,6 +20,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
+    "qrcode": "^1.5.0",
     "reflect-metadata": "^0.1.13",
     "uuid": "^8.3.2"
   },
@@ -27,6 +29,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.39",
+    "@types/qrcode": "^1.4.2",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
