--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "mysql2": "^2.3.3",
     "qrcode": "^1.5.0",
     "reflect-metadata": "^0.1.13",
@@ -34,6 +35,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/moment": "^2.13.0",
     "@types/node": "^17.0.39",
     "@types/qrcode": "^1.4.2",
     "@types/uuid": "^8.3.4",
