--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "qrcode": "^1.5.0",
     "reflect-metadata": "^0.1.13",
@@ -32,6 +33,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/moment": "^2.13.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.39",
     "@types/qrcode": "^1.4.2",
     "@types/uuid": "^8.3.4",
